rancid-git (2.3.9-0) UNRELEASED; urgency=low

  * Unofficial package.

 -- Vincent Bernat <bernat@debian.org>  Mon, 18 Aug 2014 10:05:05 +0200