@@ -101,6 +101,9 @@ Redback
 .B srancid
 SMC switch (some Dell OEMs)
 .TP
+.B telcorancid
+Telco Systems T5C
+.TP
 .B trancid
 Netopia sDSL/T1 routers
 .TP
